Bug 169401 - FILESAVE: PPT->PPTX exporting too many tabstops
Summary: FILESAVE: PPT->PPTX exporting too many tabstops
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-12 12:02 UTC by Karthik
Modified: 2025-11-20 05:29 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
PPT file (61.50 KB, application/vnd.ms-powerpoint)
2025-11-12 12:03 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-11-12 12:02:47 UTC
Description:
Open the attached file and save it as PPTX. The resulting file can't be opened in PowerPoint.

Officeotron give the below error:
cvc-complex-type.2.4.d: Invalid content was found starting with element 'a:tab'. No child element is expected at this point.

If we unzip the file and look at slide1.xml after formatting. We see that there are more than 32 tabstops inside `tabLst` element.

According to CT_TextTabStopList, we can only have maximum of 32 tabstops inside `tabLst`

Steps to Reproduce:
1.Open the attached file
2.Save it as PPTX
3.Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file.

Expected Results:
PowerPoint opens the file without any problem.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-11-12 12:03:48 UTC
Created attachment 203896 [details]
PPT file
Comment 2 rram 2025-11-16 23:11:09 UTC
Hello Karthik,

I can confirm I had similar results when testing with both 25.8.3.2 and 26.2.0.0.alpha0+.


Some things of note:
I was able to open the original .ppt with PowerPoint without converting it. 

When I did convert it, I received the following message: 
"This document may contain formatting or content that cannot be saved in the currently selected file format PowerPoint 2m7—365 (*.pptxr. Use the default ODF file format (*.odp) to ensure that the document is saved correctly."

It seems like the missing content within the converted file triggers PowerPoint to display errors.


Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded


Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Karthik 2025-11-17 05:19:04 UTC
Hi rram,

Thanks for testing the bug. I have a fix available, will submit a patch soon :)
Comment 4 Commit Notification 2025-11-17 13:48:42 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31f7e5adee4dc599987d169493bd260f84554203

tdf#169401: PPT->PPTX exporting too many tabstops

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-11-19 19:45:34 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/5ca8e1c034444d876a9aa9dca82a27f7dce0c0ec

tdf#169401: PPT->PPTX exporting too many tabstops

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.