tdf#169401: PPT->PPTX exporting too many tabstops

When exporting as PPTX we are exporting too many tabstops. According
to CT_TextTabStopList, <tabLst> can't have more than 32 tabstops.

Change-Id: Ia96afc566a8e94b7a938cd645d05f4318cc2f970
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193860
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 07f6354e66772a4ddbcdff06e3a6c842c687b9dc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194086
Tested-by: Jenkins
(cherry picked from commit 31f7e5adee4dc599987d169493bd260f84554203)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195638
Tested-by: Michael Stahl <michael.stahl@collabora.com>